--- a/favourite-things.html
+++ b/favourite-things.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favourite Things</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <h1>My Favourite Things</h1>
